--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
+board_build.filesystem = littlefs
 lib_deps = 
 	adafruit/Adafruit SSD1306 @ ^2.5.7
 	adafruit/Adafruit GFX Library @ ^1.11.11
@@ -23,3 +24,5 @@ lib_deps =
 	esp32async/AsyncTCP@^3.4.7
 build_flags = 
 	-DCORE_DEBUG_LEVEL=3
+
+extra_scripts = ./littlefsbuilder.py
